Fix font sizes and alignment for TOC both desktop and mobile view

--- a/public/stylesheets/custom_style.css
+++ b/public/stylesheets/custom_style.css
@@ -6,6 +6,17 @@ body, select, input {
   font-size: 1.6rem;
 }
 
+.toc {
+  margin-top: -1em !important;
+}
+
+.toc li a {
+  font-size: 1.2em;
+  line-height: 0.5em;
+  /*margin-top: 0.2em;*/
+  padding-top: 0.2em;
+}
+
 .article .wrapper {
 padding: 60px 16px 92px;
 }
@@ -33,7 +44,7 @@ appearance: checkbox;
   line-height: 1em;
   margin-bottom: 0.5em;
   padding-top: 0;
-  margin-top: 1.5em;
+  margin-top: 1em;
   padding-left: 0;
   /*margin-top: 10px!important;*/
 }
@@ -48,10 +59,10 @@ appearance: checkbox;
 }
 
 .article p {
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    padding: 0.5em 0;
-    line-height: 1.35em;
+    margin-top: 0;
+    margin-bottom: 0.7em;
+    /*padding: 0.5em 0;*/
+    line-height: 1.4em;
     /*text-indent: 1em;*/
     /*font-size: 100%;*/
 }
@@ -122,18 +133,19 @@ tbody tr:nth-child(odd) {
 
 /* Change admonition-note color to a paler blue background and dark text*/
 .note {
-  margin-top: 2em;
+  margin-top: 0em;
   margin-bottom: 2em;
   background-color: #ccf5ff;
   color: #002733;
+  padding-top: 10px;
 
 }
 
 /*smaller padding-top for the header in admonition-notes*/
 .note h2 {
   padding: 0 0 0 0;
-  margin-top: -1.3em;
-  margin-bottom: 0;
+  margin-top: 0em;
+  margin-bottom: 0.0em;
 }
 
 .project .logo img {
@@ -216,13 +228,17 @@ tbody tr:nth-child(odd) {
       padding-right: 0.5em;
     }
 
-    .article h4{
-      font-size: 1.067em;
-      }
+    .toc {
+      margin-top: 0em !important;
+    }
 
-      .article h3{
-        font-size:1.215em;
-        }
+.article h4{
+      font-size: 1.067em;
+}
+
+.article h3{
+      font-size:1.215em;
+}
 
 
 }
@@ -240,11 +256,6 @@ copyright {
   padding-top: 0;
   padding: 128px 24px 96px;*/
   font-size:inherit;
-}
-
-.article h2 {
-    padding-top: 1em;
-    /*margin-top: 0;*/
 }
 
 .article .data {
@@ -265,8 +276,11 @@ text-align:left !important;
 
 .note h2 {
   padding: 0 0 0 0;
-  /*margin-top: -2.3em;*/
-  margin-bottom: 0;
+  margin-top: 0.5em;
+}
+
+.note {
+    margin-bottom: 1.5em;
 }
 
 }
